changed zoom levels

--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -49,6 +49,7 @@
         var size= 285;
         var server =
         ['http://homer.cnr.berkeley.edu/CoGe/tiler.pl?','http://toxic.berkeley.edu/CoGe/tiler.pl?','http://biocon.berkeley.edu/CoGe/tiler.pl?','http://synteny.cnr.berkeley.edu/CoGe/tiler.pl?'];
+//        ['http://toxic.berkeley.edu/CoGe/tiler.pl?'];
         var org = "<TMPL_VAR NAME=ORG>";
         var ds = '<TMPL_VAR NAME=DS>';
         var loc = '<TMPL_VAR NAME=LOC>';
@@ -60,9 +61,9 @@
                  OpenLayers.Bounds(-50000,-10000,1000000000,10000),
                  units     :'bp',
                  tileSize: new OpenLayers.Size(768, size),
-                 resolutions:[1024,512,256,128,64,32,16,8,4,2,1, 0.5, 0.25, 0.125, 0.0625, 0.032125, 0.015625],
-                 //resolutions:[128,64,32,16,8],
-                 controls: [new OpenLayers.Control.MouseDefaults()]
+                 resolutions:[4096, 1024,256,64,16,4,1,0.25, 0.125, 0.0625, 0.032125, 0.015625],
+//                 resolutions:[2048, 1024,512,256,128,64,32,16,8,4,2,1, 0.5, 0.25, 0.125, 0.0625, 0.032125, 0.015625],
+                  controls: [new OpenLayers.Control.MouseDefaults()]
             });
             layers = [
             new OpenLayers.Layer.Genomic( "Ruler" , server
