changed 'User Stuff' to 'Downloads'

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -119,7 +119,7 @@ function animate_section(name, style, speedy, show) {
 	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
       </ul>
 	</li>
-	<li>User Stuff
+	<li>Downloads
 	 <ul>	   
 	  <li><a href="/CoGe/docs/help/Precomputed_menus_and_lists/CoGe_menus.html" target="_self">Syntenic gene sets</a></li>
 
