added feature start and chromosome to overlapping feature list

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -1691,6 +1691,8 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
           <TH class="header" >E-Value</TH>
           <TH class="header" >Percent ID</TH>
           <TH class="header" >Score</TH>
+	  <TH class="header" >Feat Start</TH>
+	  <TH class="header" >Feat Chr</TH>
           <TH class="header" >Feat Length</TH>
           <TH class="header" >Org</TH>
          </TR>
@@ -1705,6 +1707,8 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
           <TD title="Click for HSP info"><TMPL_VAR NAME=FEATURE_EVAL></TD>
           <TD title="Click for HSP info"><TMPL_VAR NAME=FEATURE_PID></TD>
           <TD title="Click for HSP info"><TMPL_VAR NAME=FEATURE_SCORE></TD>
+          <TD title="Click for feature info"><TMPL_VAR NAME=FEATURE_START></TD>
+          <TD title="Click for feature info"><TMPL_VAR NAME=FEATURE_CHR></TD>
           <TD title="Click for feature info"><TMPL_VAR NAME=FEATURE_LENGTH></TD>
           <TD title="Click for feature info" style="white-space:nowrap;"><TMPL_VAR NAME=FEATURE_ORG></TD>
          </TR>
