--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -133,6 +133,16 @@ function get_sequence(rc,pro,add){
   //alert($('#seq_text').html());
 }
 
+function featlist (link) {
+ var type = $('#feature_type').val();
+ if (type) {
+  link += ';ftid=';
+  link += type;
+ }
+ window.open(link);
+
+}
+
 
 </SCRIPT>
 </TMPL_IF>
@@ -164,7 +174,7 @@ function get_sequence(rc,pro,add){
       <!--get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__<TMPL_VAR NAME=START>','args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__add', 'args__<TMPL_VAR NAME=ADD>'],[get_sequence]);gen_title(['args__rc', 'args__<TMPL_VAR NAME=TITLE_RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name']);-->
      <TMPL_IF NAME=FIND_FEATS>
      <TD align=right valign="top">
-     <DIV id="annotation_button"> <input type=button value="Find Features in Sequence" onClick="window.open('<TMPL_VAR NAME=FEATLISTLINK>')"></DIV>
+     <DIV id="annotation_button"> <input type=button value="Find Features in Sequence" onClick="featlist('<TMPL_VAR NAME=FEATLISTLINK>')"> <TMPL_VAR NAME="FEAT_TYPE_LIST"></DIV>
      </TMPL_IF>
      </TD>
      <TD align=right valign="top">
